Bug#22943 syscall pruning in libmysql  - Set the timeout values only where needed